[package]
name = "trace-file-parser-wasm"
version = "0.1.0"
authors = ["Goran Sterjov <goran.sterjov@csiro.au>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
# abif = { git = "https://gitlab.com/gsterjov/abif-rs.git" }
abif = { path = "../abif-rs" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
gloo = "0.10.0"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
cfg-if = "1.0.0"
tsify = { version = "0.4.5", default-features = false, features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
